--- a/bknprocessing/gradle.properties
+++ b/bknprocessing/gradle.properties
@@ -1,5 +1,7 @@
-org.gradle.daemon=true
+org.gradle.daemon=false
 org.gradle.parallel=true
-org.gradle.configureondemand=true
+org.gradle.configureondemand=false
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="Xmx4g"
+
+kotlin.incremental=true
