--- a/bknprocessing/node/src/main/resources/application.properties
+++ b/bknprocessing/node/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8080
+server.port=8082
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
