Iter 17: finish grpc yohaaa

--- a/bknprocessing/node/src/main/resources/application.properties
+++ b/bknprocessing/node/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8082
 
+grpc.server.port=9092
+grpc.server.address=127.0.0.1
+grpc.server.permit-keep-alive-without-calls=true
+
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
