Iter 19: docker compose last

--- a/bknprocessing/node/src/main/resources/application.properties
+++ b/bknprocessing/node/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 grpc.server.port=3010
 grpc.server.address=127.0.0.1
 grpc.server.permit-keep-alive-without-calls=true
-
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
